--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
                 <div class="disponibles">
                     <p>Pièces disponibles :</p>
                 </div>
+
+                <div class="input-range">
+                    <input type="range" class="input-bar">
+                </div>
 			</section>
 		</main>
 	</body>
