fin exercice P2C3 INPUT RANGE

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 			<h1>Les Bonnes Pièces</h1>
 		</header>
 		<main>
+
+            
+
 			<!-- Menu de recherche -->
 			<section class="filtres">
 				<h3>Filtres</h3>
@@ -22,17 +25,21 @@
 				<button class="btn-decroissant">Trier par prix décroissant</button>
 				<br>
 				<button class="btn-nodesc">Filtrer les pièces sans description</button>
+                <br>
+                <p>Prix maximum: </p>
+                <input type="range" class="input-slider" name="prix-max" id="prix-max" min= "0" max="60" step="5">
+
 			</section>
 
 			<!-- Fiches produits -->
 			<section class="fiches">
 				<!-- Code ajouté -->
 				<div class="abordables">
+				</div>
 
-				</div>
 				<div class="disponibles">
-					
 				</div>
+
 			</section>
 		</main>
 	</body>
